# clox

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  constant.h  switch.h
include/basic/: chunk.h  memory.h
include/component/: graystack.h  keywordtrie.h  valuetable.h  vartable.h
include/debug/: debug.h
include/error/: error.h
include/utils/: linklist.h  stack.h  table.h  trie.h
include/value/: object.h  value.h
include/value/native/: clock.h  type.h
include/value/object/: class.h  function.h  list.h  string.h  upvalue.h
include/value/primitive/: float.h  integer.h
include/vm/: compiler.h  parserules.h  runtime.h  scanner.h  vm.h
samples/: class_inherit_test.txt  class_init_test.txt  closure_test.txt  euler_sieve.txt  this_test.txt
src/: main.c  switch.c  test_main.c
src/basic/: chunk.c  memory.c
src/component/: graystack.c  keywordtrie.c  valuetable.c  vartable.c
src/debug/: debug.c
src/utils/: stack.c  table.c  trie.c
src/value/: object.c  value.c
src/value/native/: clock.c  type.c
src/value/object/: class.c  function.c  list.c  string.c
src/value/primitive/: float.c  integer.c
src/vm/: compiler.c  scanner.c  vm.c
